--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Card</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About me</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,900&amp;display=swap'><link rel="stylesheet" href="./style.css">
 
