--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
   </div>
 </div>
+   <a class="button" href="#">GO TO HOMEPAGE</a>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/16.12.0/umd/react.production.min.js'></script>
 </body>
